Add can_edit to assistant
